--- a/source/css/base/_base.sass
+++ b/source/css/base/_base.sass
@@ -28,6 +28,7 @@ a
 
 header
   background-color: $toolbox
+  z-index: 10
   .grid__row
     border-bottom: none
   a
