--- a/source/css/components/_navigation.sass
+++ b/source/css/components/_navigation.sass
@@ -49,6 +49,7 @@ svg.bell
   @include flex(flex,column)
   margin-top: 1.5em
   margin-top: 0
+  z-index: 10
   align-self: center
   li
     padding-left: 1.1em
